// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForemanRhCloud selectors should return ForemanInventoryUpload 1`] = `
Object {
  "inventoryReducersNamespaces": Object {},
}
`;

exports[`ForemanRhCloud selectors should return ForemanRhCloud 1`] = `
Object {
  "inventoryUpload": Object {
    "inventoryReducersNamespaces": Object {},
  },
}
`;
